<resources>
    <string name="app_name">Messenger</string>
    <string name="register_string"><u>Create an account?</u></string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="choose_photo">Choose\nphoto</string>
    <string name="your_name">Your name</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="log_in">Log In</string>
    <string name="sign_out">Sign out</string>
    <string name="choose_user">CHOOSE USER</string>
    <string name="confirm_action">CONFIRM ACTION</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_message">New message</string>
</resources>