<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/innerRR"
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_linear_layout">

            <EditText
                android:id="@+id/dialogRegisterNameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/your_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#787272"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dialogRegisterLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#787272"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dialogRegisterPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="195dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#787272"
                android:textSize="18sp" />

            <Button
                android:id="@+id/choosePhotoButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="285dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/round_choose_photo_button"
                android:text="@string/choose_photo"
                android:textColor="#81D4FA" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/selectedPhotoInRegister"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="285dp"
                android:layout_marginEnd="100dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/dialogLogInButton"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/round_edit_text"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialogRegisterTextView"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="530dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/round_text_view_for_acc"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textSize="24sp" />

    </RelativeLayout>

</RelativeLayout>